<resources>
    <string name="app_name">My_friend_Kim-Jung-San</string>
    <string name="home_menu">홈</string>
    <string name="math_operations_menu">바로정산</string>
    <string name="calendar_blank_menu">계좌번호부</string>
    <string name="chat_circle_menu">모임방</string>
    <string name="notice">알림</string>
    <string name="my_page">마이페이지</string>
    <string name="_1_n">1/N</string>
    <string name="edit">편집</string>
    <string name="name">이름</string>
    <string name="kimjeongsan">김정산</string>
    <string name="kakao_email">카카오 계정</string>
    <string name="tmp_email">abcde@gmail.com</string>
    <string name="account_number">계좌번호</string>
    <string name="tmp_account">123456789</string>
    <string name="tmp_bank">신한</string>
    <string name="withdraw">탈퇴하기</string>
    <string name="splash_title">복잡한 돈 계산?! 이제는\n<b>내 친구 김정산</b> 에게 맡겨!</string>
    <string name="splash_sub">늘 복잡했던 돈 계산 이젠 빠르고 간편하게</string>
    <string name="start_kakao">카카오로 시작하기</string>
    <string name="add_new_account">새로운 계좌 추가</string>
    <string name="add_user">유저 추가</string>
    <string name="add_other">따로 추가</string>
    <string name="app_title">내 친구 김정산</string>
    <string name="testMonth">July</string>
    <string name="testYear">2022</string>
    <string name="create_meeting">모임방 생성</string>
    <string name="meeting_room_information">모임방 정보</string>
    <string name="title_hint">제목을 입력해주세요.</string>
    <string name="start_day">시작 날짜</string>
    <string name="start_time">시작 시간</string>
    <string name="invite">참가자 초대</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_member">참가자 초대</string>
    <string name="check">확인</string>
    <string name="recent_invite">최근에 초대</string>
    <string name="menu_name">소주</string>
    <string name="menu_price">5,000</string>
    <string name="menu_quantity">1</string>
    <string name="menu_total_price">5,000</string>
    <string name="menu_people_count">2</string>
    <string name="today_date">2022.07.13</string>
</resources>