<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/grayLine"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioButton
        android:id="@+id/voteBtn1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:button="@drawable/check_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleX="0.75"
        android:scaleY="0.75"
        />

    <TextView
        android:id="@+id/menuNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_name"
        android:textSize="14sp"
        android:textColor="#222B45"
        android:fontFamily="@font/notosans_kr"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/voteBtn1"
        app:layout_constraintTop_toTopOf="@id/voteBtn1"
        app:layout_constraintBottom_toBottomOf="@id/voteBtn1"
        />

    <TextView
        android:id="@+id/menuPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_price"
        android:textSize="14sp"
        android:textColor="#222B45"
        android:fontFamily="@font/notosans_kr"
        android:layout_marginStart="56.25dp"
        app:layout_constraintStart_toEndOf="@id/menuNameTV"
        app:layout_constraintTop_toTopOf="@id/voteBtn1"
        app:layout_constraintBottom_toBottomOf="@id/voteBtn1"/>

    <TextView
        android:id="@+id/menuQuanTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_quantity"
        android:textSize="14sp"
        android:textColor="#222B45"
        android:fontFamily="@font/notosans_kr"
        android:layout_marginStart="35.01dp"
        app:layout_constraintStart_toEndOf="@id/menuPriceTV"
        app:layout_constraintTop_toTopOf="@id/voteBtn1"
        app:layout_constraintBottom_toBottomOf="@id/voteBtn1"/>

    <TextView
        android:id="@+id/menuTotalPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_total_price"
        android:textSize="14sp"
        android:textColor="#222B45"
        android:fontFamily="@font/notosans_kr"
        android:layout_marginStart="45.01dp"
        app:layout_constraintStart_toEndOf="@id/menuQuanTV"
        app:layout_constraintTop_toTopOf="@id/voteBtn1"
        app:layout_constraintBottom_toBottomOf="@id/voteBtn1"/>

    <ImageView
        android:id="@+id/userIV"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:background="@drawable/ic_user_vote"
        app:layout_constraintTop_toTopOf="@id/voteBtn1"
        app:layout_constraintBottom_toBottomOf="@id/voteBtn1"
        app:layout_constraintStart_toEndOf="@id/menuTotalPriceTV"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/menuPeopleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_people_count"
        android:textSize="12sp"
        android:textColor="#8F9BB3"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/notosans_kr"
        app:layout_constraintStart_toEndOf="@id/userIV"
        app:layout_constraintTop_toTopOf="@id/voteBtn1"
        app:layout_constraintBottom_toBottomOf="@id/voteBtn1"/>

</androidx.constraintlayout.widget.ConstraintLayout>