<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mypage.MyPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backArrowIBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/myPageTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/myPageTV" />

        <TextView
            android:id="@+id/myPageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:text="@string/my_page"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:text="@string/edit"
            android:textColor="@color/sky_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/myPageTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/myPageTV" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/profileRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:scaleType="fitXY"
            android:src="@drawable/basic_photo" />

        <ImageView
            android:id="@+id/profileCameraIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/profileIV"
            android:layout_alignBottom="@+id/profileIV"
            android:src="@drawable/camera" />

    </RelativeLayout>

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/notosans_kr"
        android:includeFontPadding="false"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileRL" />

    <RelativeLayout
        android:id="@+id/nameRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:text="@string/kimjeongsan"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosans_kr"
        android:includeFontPadding="false"
        android:text="@string/kakao_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/nameTV"
        app:layout_constraintTop_toBottomOf="@+id/nameRL" />

    <RelativeLayout
        android:id="@+id/emailRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTV">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:text="@string/tmp_email"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/accountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosans_kr"
        android:includeFontPadding="false"
        android:text="@string/account_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/nameTV"
        app:layout_constraintTop_toBottomOf="@+id/emailRL" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bankBtn"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/notosans_kr"
        android:includeFontPadding="false"
        android:text="@string/tmp_bank"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/accountTV"
        app:layout_constraintTop_toBottomOf="@+id/accountTV" />

    <RelativeLayout
        android:id="@+id/accountRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTV">

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle" />

        <EditText
            android:id="@+id/accountET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:inputType="numberDecimal"
            android:text="@string/tmp_account"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusFriendBtn"
        android:layout_width="93dp"
        android:layout_height="18dp"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/plus_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:textColor="@color/sky_blue"
        android:textSize="12sp"
        android:padding="10dp"
        android:fontFamily="@font/notosans_kr"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/plusFriendBtn"
        app:layout_constraintTop_toTopOf="@+id/plusFriendBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>