<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meeting.CreateMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backArrowIBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/createMeetingTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/createMeetingTV" />

        <TextView
            android:id="@+id/createMeetingTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/notosans_kr"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/create_meeting"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <TextView
        android:id="@+id/meetingInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/sans_kr"
        android:includeFontPadding="false"
        android:text="@string/meeting_room_information"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <RelativeLayout
        android:id="@+id/meetingTitleRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetingInfoTV">

        <View
            android:id="@+id/titleV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle" />

        <EditText
            android:id="@+id/titleET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/notosans_kr"
            android:hint="@string/title_hint"
            android:inputType="textNoSuggestions"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/stateColorIV"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:src="@drawable/red" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/stateRedIBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingTitleRL"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/unselected_button"
        android:src="@drawable/red"
        android:layout_width="34dp"
        android:layout_height="34dp"/>
    <ImageButton
        android:id="@+id/stateOrangeIBtn"
        app:layout_constraintTop_toTopOf="@+id/stateRedIBtn"
        app:layout_constraintStart_toEndOf="@+id/stateRedIBtn"
        android:layout_marginStart="10dp"
        android:background="@drawable/unselected_button"
        android:src="@drawable/orange"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <ImageButton
        android:id="@+id/stateYellowIBtn"
        app:layout_constraintTop_toTopOf="@+id/stateRedIBtn"
        app:layout_constraintStart_toEndOf="@+id/stateOrangeIBtn"
        android:layout_marginStart="10dp"
        android:background="@drawable/unselected_button"
        android:src="@drawable/yellow"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <ImageButton
        android:id="@+id/stateGreenIBtn"
        app:layout_constraintTop_toTopOf="@+id/stateRedIBtn"
        app:layout_constraintStart_toEndOf="@+id/stateYellowIBtn"
        android:layout_marginStart="10dp"
        android:background="@drawable/unselected_button"
        android:src="@drawable/green"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <ImageButton
        android:id="@+id/stateBlueIBtn"
        app:layout_constraintTop_toTopOf="@+id/stateRedIBtn"
        app:layout_constraintStart_toEndOf="@+id/stateGreenIBtn"
        android:layout_marginStart="10dp"
        android:background="@drawable/unselected_button"
        android:src="@drawable/blue"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <ImageButton
        android:id="@+id/statePurpleIBtn"
        app:layout_constraintTop_toTopOf="@+id/stateRedIBtn"
        app:layout_constraintStart_toEndOf="@+id/stateBlueIBtn"
        android:layout_marginStart="10dp"
        android:background="@drawable/unselected_button"
        android:src="@drawable/purple"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <RelativeLayout
        android:id="@+id/startDayRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stateRedIBtn">

        <View
            android:id="@+id/dayV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/dayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:text="@string/start_day"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/calendarIV"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/select_calendar" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/startTimeRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startDayRL">

        <View
            android:id="@+id/timeV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle" />

        <EditText
            android:id="@+id/timeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/notosans_kr"
            android:includeFontPadding="false"
            android:hint="@string/start_time"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/timeIV"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/select_time" />
    </RelativeLayout>

    <TextView
        android:id="@+id/inviteTV"
        android:text="@string/invite"
        app:layout_constraintStart_toStartOf="@id/meetingInfoTV"
        app:layout_constraintTop_toBottomOf="@+id/startTimeRL"
        android:fontFamily="@font/sans_kr"
        android:includeFontPadding="false"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <ImageButton
        android:id="@+id/inviteIBtn"
        android:background="@drawable/invite_button"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@+id/inviteTV"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/finishIBtn"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/finish"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>